# agent-trace

./: .env.example  ARCHITECTURE.md  Dockerfile  README.md  TODO.md  fly.toml  pyproject.toml
migrations/: 001_initial.sql
src/agent_trace/: auth.py  config.py  db.py  embeddings.py  main.py  models.py
src/agent_trace/routes/: health.py  traces.py
tests/: test_traces.py
