[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-trace"
version = "0.1.0"
description = "Reasoning provenance service for AI agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "asyncpg>=0.30,<1",
    "pgvector>=0.3,<1",
    "redis>=5.0,<6",
    "sqlalchemy>=2.0,<3",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
# Full embeddings (adds ~12GB via PyTorch). Production uses hash fallback by default.
embeddings = [
    "sentence-transformers>=3.0,<4",
]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5.0,<6",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_trace"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
